# the-junior-associate

./: .gitignore  CONTINUETODO.md  LICENSE  MANIFEST.in  README.md  README2.md  package-lock.json  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yaml
tests/: __init__.py  conftest.py
tests/test_scrapers/: test_base_scraper.py
tests/test_utils/: test_data_models.py  test_helpers.py
the_junior_associate/: __init__.py  cli.py
the_junior_associate/scrapers/: __init__.py  austlii.py  bailii.py  canlii.py  courtlistener.py  curia_europa.py  findlaw.py  german_law_archive.py  hklii.py  indian_kanoon.py  kenya_law.py  legal_tools.py  legifrance.py  singapore_judiciary.py  supremecourt_india.py  supremecourt_japan.py  worldcourts.py  worldlii.py
the_junior_associate/utils/: __init__.py  base.py  data_models.py  exceptions.py  helpers.py
